<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Ticktock</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="author">Lauzy</string>

    <string name="action_search">Search</string>
    <string name="action_clear">Clear</string>
    <string name="drawer_music">Local Music</string>
    <string name="drawer_net_song">Network Song</string>
    <string name="drawer_favorite">Favorite</string>
    <string name="drawer_recent">Recent</string>
    <string name="drawer_setting">Setting</string>
    <string name="drawer_about">About</string>
    <string name="drawer_exit">Exit</string>

    <string name="setting_theme">Theme Color</string>
    <string name="choose_theme">Choose Theme Color</string>
    <string name="confirm">yes</string>
    <string name="cancel">no</string>

    <!--local -->
    <string name="music">Song</string>
    <string name="album">Album</string>
    <string name="singer">Singer</string>

    <!--category-->
    <string name="new_song">New Song</string>
    <string name="hot_song">Hot Song</string>
    <string name="rock_song">Rock</string>
    <string name="jazz_song">Jazz</string>
    <string name="pop_song">Popular</string>
    <string name="foreign_song">Western</string>
    <string name="classic_song">Classic</string>
    <string name="love_song">Love</string>
    <string name="movie_song">Movie</string>
    <string name="net_song">Network</string>

    <string name="open_permission">open</string>
    <string name="permission_denied">Permission to access the music was denied.Please open the permission to enjoy the music.</string>

    <string name="song_numbers"><xliff:g id="count">%d</xliff:g>songs</string>
    <string name="song_number"><xliff:g id="count">%d</xliff:g>song</string>

    <string name="album_numbers"><xliff:g id="count">%d</xliff:g>albums</string>
    <string name="album_number"><xliff:g id="count">%d</xliff:g>album</string>

    <string name="_00_00">00:00</string>

    <string name="repeat_loop_mode">QueueLoop</string>
    <string name="repeat_single_mode">SingleLoop</string>
    <string name="repeat_shuffle_mode">Shuffle</string>

    <string name="clear_favorite_songs">Clear your favorite songs?</string>
    <string name="clear_recent_songs">Clear your recently played songs?</string>

    <string name="empty">Empty</string>

    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="menu_play_next">Play next</string>

    <string name="delete_song">Are you sure you wang to delete it?</string>
</resources>
