<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/first_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music"
            android:title="@string/drawer_music"/>
        <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/drawer_favorite"/>
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent"
            android:title="@string/drawer_recent"/>
    </group>


    <group android:id="@+id/second_group">

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/drawer_setting"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/drawer_about"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/drawer_exit"/>
    </group>

</menu>
